# sw

./: .dockerignore  CMakeLists.txt  DATA_FLOW.md  DOCKER_USAGE.md  Dockerfile  QUICK_START.md  README.md  build_docker.sh  dev-requirements.txt  example_usage.sh  inference.py  pyproject.toml  run_docker_infer.sh  run_docker_infer_custom.sh  run_hmmer_infer.sh  run_infer_docker.sh  run_mmseqs_infer.sh
data/: demo_7qa9.json  demo_8ec1.json  demo_8ecx.json  demo_8fza.json
demo_output/demo_6zcy/: demo_6zcy_pred.cif
demo_output/demo_6zcy_smiles/: demo_6zcy_smiles.json  terms_of_use.md
demo_output/demo_6zcy_smiles/demo_6zcy_smiles-rank1/: all_results.json  predicted_structure.cif
demo_output/demo_6zcy_smiles/demo_6zcy_smiles-rank2/: all_results.json  predicted_structure.cif
docs/: installation.md
output/demo_6zcy_smiles/demo_6zcy_smiles-rank1/: all_results.json
output/demo_8ec1/: final_features.pkl
output/demo_8ec1/demo_8ec1-pred-1-1/: all_results.json
src/helixfold/: __init__.py
src/helixfold/common/: __init__.py  all_atom_pdb_save.py  confidence.py  protein.py
src/helixfold/data/: __init__.py  feature_processing.py  label_utils.py  mmcif_parsing.py  mmcif_parsing_paddle.py  msa_identifiers_rna.py  msa_pairing.py  parsers.py  pipeline.py  pipeline_conf_bonds.py  pipeline_hybrid.py  pipeline_multimer.py  pipeline_multimer_parallel.py  pipeline_parallel.py  pipeline_rna.py  pipeline_rna_multimer.py  pipeline_rna_parallel.py  pipeline_token_feature.py  templates.py  templates_quat_affine.py  utils.py
src/helixfold/infer_scripts/: feature_processing_aa.py  (+1 more)
(+37 files in other folders)
