[build-system]
requires = [
    "scikit_build_core",
]
build-backend = "scikit_build_core.build"

[project]
name = "helixfold"
version = "3.0.0"
readme = "README.md"
requires-python = "==3.9.*" #currently test on python3.9
dependencies = [
    "biopython==1.79",
    "dm-tree==0.1.6",
    "ml-collections==0.1.0",
    "pandas==1.3.4",
    "scipy==1.9.0",
    "rdkit-pypi==2022.9.5", 
    "nvidia-cudnn-cu12==8.9.1.23",
    "paddlepaddle_gpu @ https://paddle-wheel.bj.bcebos.com/2.6.1/linux/linux-gpu-cuda12.0-cudnn8.9-mkl-gcc12.2-avx/paddlepaddle_gpu-2.6.1.post120-cp39-cp39-linux_x86_64.whl",
]
